# hdf5_vs_nexus

./: CMakeLists.txt  path.h  process_args.cpp  process_args.h  read_results.md  repeat  timer.cpp  timer.h  with_hdf5.cpp  with_napi.cpp  with_nexus.cpp
common/: CMakeLists.txt
common/data/: INTER0003460.nxs  MAR11001.nxs  POLREF000011040.nxs
data/: INTER00013460.nxs  POLREF00004699.nxs
results/: read_results.md
with_hdf5/: CMakeLists.txt  trial.cpp
with_nexus/: CMakeLists.txt  trial.cpp
